<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="subtitle">Sottotitolosottotitolosottotitolosottotitolo</string>
    <string name="hello_world">Hello World!</string>
    <string name="date">08-02-2017</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus magna, pellentesque semper aliquam quis, molestie non lacus. Nam elementum eu ligula et rhoncus. Sed eu metus a magna vulputate hendrerit vitae mattis eros. Mauris urna felis, hendrerit vel turpis a, rhoncus pulvinar ante. Vivamus fringilla lectus tortor, tempor vulputate.</string>
    <string name="submit">Submit</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_success">Logged in successfully</string>
    <string name="andrea">Andrea Valenziano</string>
    <string name="tel">3485916588</string>
    <string name="position">Via Sandro Sandri, 81</string>
    <string name="email">valenzianoa@gmail.com</string>
    <string name="corso">LTM</string>
    <string name="data_nas">13-11-1997</string>
    <string name="call">Call</string>
    <string name="go">Go</string>
    <string name="send_email">Send Email</string>
    <string name="info">info</string>
    <string name="student_name">Nome e cognome</string>
    <string name="mail_hint">email</string>
    <string name="phone">Phone number</string>
    <string name="student">Student</string>
    <string name="insert_student_name">Inserisci il nome</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

</resources>
