<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account"
        android:layout_alignParentTop="true"
        android:hint="@string/account"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@+id/account"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20dp"
        android:id="@+id/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryLight"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>


